fixed overflow on target-audience section

--- a/src/components/home/target-audience/target-audience.module.scss
+++ b/src/components/home/target-audience/target-audience.module.scss
@@ -113,16 +113,16 @@
         li {
           color: var(--gray-90);
           font-family: 'Geist', sans-serif;
-          font-size: 3.875rem;
+          font-size: clamp(2.5rem, 5.5vw, 3.875rem);
           font-weight: 700;
-          line-height: 76px;
+          // line-height: 76px;
           white-space: nowrap;
 
-          @include media('<=tablet') {
-            font-size: 2.5rem;
-            line-height: 48px;
-            font-weight: 600;
-          }
+          // @include media('<=tablet') {
+          //   font-size: 2.5rem;
+          //   line-height: 48px;
+          //   font-weight: 600;
+          // }
         }
 
         li:nth-child(1) {
